--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ bin/
 
 #specific files
 Makefile
-conanbuildinfo\.lua
-conanbuildinfo\.txt
-conaninfo\.txt
-graph_info\.json
+vendor/conan/conanbuildinfo\.lua
+vendor/conan/conanbuildinfo\.txt
+vendor/conan/conaninfo\.txt
+vendor/conan/graph_info\.json
 compile_commands.json
 
 
