--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 obj/
 bin/
 \.cquery_cached_index
+\.ccls-cache
 
 #specific files
 Makefile
 vendor/conan/conanbuildinfo\.lua
 vendor/conan/conanbuildinfo\.txt
+vendor/conan/conanbuildinfo.premake.lua
 vendor/conan/conaninfo\.txt
 vendor/conan/graph_info\.json
 compile_commands.json
@@ -21,7 +23,7 @@ compile_commands.json
 *.user
 *.filters
 *.cmake
-
+*.ccls-root
 
 #emacs
 .\#*
