--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ bin/
 \.cquery_cached_index
 \.ccls-cache
 build/
+.clangd/
 
 #specific files
 Makefile
@@ -23,7 +24,6 @@ compile_commands.json
 *.vcxproj
 *.user
 *.filters
-*.cmake
 *.ccls-root
 
 #emacs
