--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,4 +19,4 @@ add_custom_command(
 
 add_custom_target(run_tests ALL DEPENDS tests.lic ${project_name})
 
-target_clangformat(${project_tests})
+#target_clangformat(${project_tests})
