--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,11 @@ obj/
 bin/
 \.cquery_cached_index
 \.ccls-cache
+build/
 
 #specific files
 Makefile
-vendor/conan/conanbuildinfo\.lua
 vendor/conan/conanbuildinfo\.txt
-vendor/conan/conanbuildinfo.premake.lua
 vendor/conan/conaninfo\.txt
 vendor/conan/graph_info\.json
 compile_commands.json
