--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,11 +8,12 @@ target_link_libraries(
   PRIVATE 
   ${CONAN_LIBS}
   ${project_lib}
-  compile_options)
+  warning_options)
 
 target_include_directories(
   ${project_tests}
-  PRIVATE ${CMAKE_SOURCE_DIR}/src)
+  PRIVATE 
+  ${CMAKE_SOURCE_DIR}/src)
 
 add_custom_command(
   OUTPUT tests.lic
