--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
-file(GLOB_RECURSE lib_files
-  CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/src/*.cpp)
+add_library(${project_lib})
 
-add_library(${project_lib} STATIC ${lib_files})
+target_sources(${project_lib}
+  PRIVATE
+  example/example.cpp)
+
 target_link_libraries(${project_lib} PRIVATE ${CONAN_LIBS})
 target_include_directories(${project_lib} PUBLIC ${CMAKE_SOURCE_DIR}/src)
 
