--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,22 +3,8 @@ add_executable(${integration_tests} main.cpp)
 target_link_libraries(
   ${integration_tests}
   PRIVATE 
-  ${CONAN_LIBS}
-  ${project_lib}
-  warning_options)
+  CONAN_PKG::doctest
+  src::lib
+  main::compile_options)
 
-target_include_directories(
-  ${integration_tests}
-  PRIVATE 
-  ${CMAKE_SOURCE_DIR}/src)
-
-add_custom_command(
-  OUTPUT integration_tests.lic
-  COMMAND ${ntegration_tests}
-  COMMENT "Running integration tests")
-
-add_custom_target(run_integration_tests 
-  ALL DEPENDS 
-  integration_tests.lic 
-  ${project_name})
-
+add_test(${integration_tests} COMMAND ${integration_tests})
