--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -3,34 +3,30 @@ name: CI
 on: [pull_request, push]
 
 jobs:
-  ci:
-    name: ${{ matrix.name }}  
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8]
-        name: [ubuntu-18.04-gcc-9]
+        cxx: [g++-10, clang++-10]
+        build_type: [Debug, Release]
+        os: [ubuntu-18.04]
         include:
-          - name: ubuntu-18.04-gcc-9
+          - cxx: g++-10
+            os: ubuntu-20.04
+          - cxx: clang++-10
             os: ubuntu-18.04
-            compiler: gcc
-            version: "9"
-
+	    
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+     - name: Make build directory
+       run: |
+       	    ${{matrix.install}}
+            cmake -E make_directory ${{runner.workspace}}/build
+    - name: Configure
+      working-directory: ${{runner.workspace}}/build
+      env:
+        CXX: ${{matrix.cxx}}
       run: |
-        python -m pip install --upgrade pip
-        pip install conan
-        echo "::set-env name=CC::gcc-${{ matrix.version }}"
-        echo "::set-env name=CXX::g++-${{ matrix.version }}"
-    - name: configure
-      run: |
-        mkdir build && cd build && cmake ..
-    - name: build
-      run: |
-        cmake --build build
+        cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}}
+    - name: Build
+      run: cmake --build . --config ${{matrix.build_type}}
+
