--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -10,20 +10,30 @@ jobs:
         cxx: [g++-10, clang++-10]
         build_type: [Debug, Release]
         os: [ubuntu-18.04]
+        python-version: [3.8]
      
-    steps:  
-     - uses: actions/checkout@v2
-     
-     - name: Make build directory
-       run: cmake -E make_directory ${{runner.workspace}}/build
+    steps:
+      - uses: actions/checkout@v2
+        
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install conan   
+   
+      - name: Make build directory
+        run: cmake -E make_directory ${{runner.workspace}}/build
 
-     - name: Configure CMake
-       working-directory: ${{runner.workspace}}/build
-       env:
-        CXX: ${{matrix.cxx}}
-       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE 
+      - name: Configure CMake
+        working-directory: ${{runner.workspace}}/build
+        env:
+          CXX: ${{matrix.cxx}}
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE 
        
-     - name: Build
-       working-directory: ${{runner.workspace}}/build
-       run: cmake --build . --config $BUILD_TYPE
+      - name: Build
+        working-directory: ${{runner.workspace}}/build
+        run: cmake --build . --config $BUILD_TYPE
 
