--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install conan   
+          
+      - name: Install lcov
+        run: sudo apt-get install -y lcov
    
       - name: Make build directory
         run: cmake -E make_directory ${{runner.workspace}}/build
