--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -11,6 +11,9 @@ jobs:
         build_type: [Debug, Release]
         os: [ubuntu-18.04]
         python-version: [3.8]
+        exclude: 
+          - build_type: Debug
+            cxx: clang++-9
      
     steps:
       - uses: actions/checkout@v2
