--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -37,7 +37,7 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         env:
           CXX: ${{matrix.cxx}}
-        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE 
+        run: cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}}
        
       - name: Build
         working-directory: ${{runner.workspace}}/build
